--- a/接口文档/移动视频后台_接口文档.md
+++ b/接口文档/移动视频后台_接口文档.md
@@ -77,7 +77,7 @@ action为对应的控制动作
 
 ## 三、接口列表
 
-#### 1. 播放实时或历史视频  --play
+#### 1. (国标或海康sdk)播放实时或历史视频  --play
 
 > 请求参数
 
@@ -85,9 +85,18 @@ action为对应的控制动作
 <?xml version=\"1.0\" encoding=\"GB2312\" ?>
 <Request>
 
-	//requestId 自增         --int
+	//requestId 自增         --必须
 	<RequestID>1</RequestID>
 	
+	//播放协议 GB28181国标  Hikvisoin海康sdk形式   --必须
+	<Protocol>GB28181</Protocol>
+	
+	//海康sdk形式必带  用于关联视频流通道的唯一id
+	<MediaChannel>1</MediaChannel>
+	
+	//主子码流选择 0-主码流，1-子码流，2-码流3，3-虚拟码流  海康sdk必带
+	<StreamType>0</StreamType>
+
 	//设备id
 	<DeviceID>44030100001310000002</DeviceID>
 	
@@ -139,9 +148,11 @@ action为对应的控制动作
 	//会话id
 	<session>12</session>
 	
-	//播放地址
+	//播放地址 国标形式必返回
     <PlayUrl>rtmp://172.16.16.102/live/33_1</PlayUrl> 
 
+    //海康sdk必返回 用于关联视频唯一id
+	<MediaChannel>1</MediaChannel>
 </Response>
 
 
@@ -440,6 +451,34 @@ action为对应的控制动作
 ```
 
 	MS_ERR_NO_ERROR				=	0,	//无错误	MS_ERR_UNKNOWN_ERROR		=	1,	//未知原因失败	MS_ERR_PARAMS_INVALID		=	2,	//参数不正确	MS_ERR_CONNECT_FAIL			=	3,	//通讯失败	MS_ERR_DEVICE_NOT_REGISTER	=	4,	//设备未注册	MS_ERR_CALL_FAIL			=   5,  //建立呼叫失败	MS_ERR_REQUEST_CANCELLED    =   6,  //请求取消	MS_ERR_CALL_NOT_EXIST       =   7,  //呼叫不存在	MS_ERR_INVALID_STATE        =   8,  //状态不对	MS_ERR_TASK_EXCEPTION		=	100001,	//任务执行异常	MS_ERR_MEM_EXCEPTION		=	100002,	//内存异常	MS_ERR_SERVICE_BUSY			=	100003,	//服务器忙	MS_ERR_NO_RECORD_DATA		=	100015,	//没有录像数据
+	
+
+
+
+```
+视频流TCP通道协议：
+当移动端通过TCP连接到MobileServer时，MobileServer立即将MediaChannel值发送给移动客户端。
+移动客户端发起播放请求时，必须带上这个MediaChannel值，这样MobileServer可以根据这个
+MediaChannel值进行播放请求与媒体通道的关联。MediaChannel值为大于0的整数。
+
+报文传输方向：MobileServer->移动客户端
+报文格式：2字节数据类型+4字节数据长度+变长数据
+数据类型：
+   1)0x0520:表示MobileServer通知当前TCP连接的MediaChannel号，数据长度为4，数据内容为4字节的MediaChannel号
+   2)0x1314:表示MobileServer转发给移动客户端的数据，这些数据是视频或音频数据，也可能是系统头。此时数据长度字段为
+     转发数据长度+1（一个字节的数据类型+数据）。
+     数据部分的第一个字节是数据类型，参见海康的编程文档；后续字节为要转发的数据。
+
+报文传输方向：移动客户端->MobileServer
+报文格式：2字节数据类型+4字节数据长度+变长数据
+数据类型：
+   1)0x0521:表示移动客户端通知MobileServer当前TCP连接保活，相当于ping包，数据长度为0，无数据字段
+MobileServer如果在60秒内没有收到保活包，则认为手机客户端已经断开，会将TCP连接断掉。
+
+```
+
+	
+
 
 
 
